<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".vista.Inicio">

    <ImageView
        android:id="@+id/IV_apcp"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        android:contentDescription="@string/IB_l"
        android:padding="-30dp"
        app:srcCompat="@drawable/apcp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/IB"
                app:srcCompat="@drawable/email" />

            <EditText
                android:id="@+id/ET_Email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:contentDescription="@string/IB_l"
                app:srcCompat="@drawable/password" />

            <EditText
                android:id="@+id/ET_Password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/Password"
                android:inputType="textPassword" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/biometric_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/huella_dig" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp">

            <Button
                android:id="@+id/Btn_ingresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ingresar" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>